--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/react": "^17.0.1",
+    "bootstrap": "^4.6.0",
     "dotenv": "^8.2.0",
     "react": "^17.0.1",
     "react-app-rewire-alias": "^1.0.3",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.0.1"
